fix header bug where the middle flexbox would overlap on left one preventing interactions

--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -18,6 +18,7 @@ body header .left-section,
 body header .middle-section,
 body header .right-section {
 	display: flex;
+	flex: 1;
 	align-items: center;
 }
 
@@ -28,6 +29,7 @@ body header .left-section {
 
 body header .left-section .header-hamburger-menu {
 	height: 3vh;
+	cursor: help;
 }
 
 body header .left-section .header-logo {
@@ -40,7 +42,6 @@ body header .middle-section {
 	justify-content: center;
 	display: flex;
 	align-items: center;
-	margin-left: -10vw;
 }
 
 body header .middle-section img {
@@ -61,7 +62,8 @@ body header .right-section img {
 	border: solid 2px black;
 }
 
-@media (max-width: 600px) {
+/* FIXME Problem here? */
+@media (max-width: 600px) { 
 	body header {
 		height: 10vh;
 	}
@@ -70,10 +72,10 @@ body header .right-section img {
 		margin-left: 3vw;
 	}
 
-	body header .left-section .header-hamburger-menu {
+	/* body header .left-section .header-hamburger-menu {
 		height: 3vh;
 	}
-	
+	 */
 	body header .left-section .header-logo {
 		margin-left: 28vw;
 		height: 4vh;
